src/components/Restaurant/Restaurant.css
.rounded-corners canvas {
	border-radius: 8px;
}

.dot {
	height: 10px;
	width: 10px;
	border-radius: 50%;
	display: inline-block;
	margin-bottom: 1px;
}

.dot.offline {
	background-color: red;
}

.dot.online {
	background-color: rgb(0, 172, 0);
}

.restaurant-wrapper {
	position: relative;
	width: 65%;
	height: 90%;
	min-height: 9rem;
	margin: 20px auto 0;
}

.text-container h2 {
	margin: 0;
	color: #282c34;
	font-size: 2rem;
	max-width: 75%;
	z-index: 1;
}

.text-container p {
	color: #282c34;
	font-size: 20px;
	z-index: 1;
	margin: 0;
}

.text-container {
	position: absolute;
	margin-top: 20px;
	display: flex;
	justify-content: space-between;
	align-items: center;
	height: 20px;
	width: 100%;
}

@media (max-width: 576px) {
	.text-container {
		bottom: 12px;
		height: auto;
	}
	.text-container p {
		font-size: 15px;
		align-self: flex-end;
	}
	.text-container h2 {
		font-size: 1rem;
	}
	.restaurant-wrapper {
		margin-bottom: 10px;
		width: 70%;
		height: 95%;
	}
}

